--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -2,6 +2,12 @@
  body {
   font-family: 'Lato', sans-serif;
   font-weight: 400; 
+  font-size: 16px;
+  text-align: center;
+ }
+
+ h1{
+   text-transform: uppercase;
  }
 
 /* RAY HEADING */
@@ -100,10 +106,15 @@
   /******Menu Page******/
 
   /* Section Grid Positioning */
-  .steak-sect, .burger-sect, .chicken-sect, .dessert-sect{
-    position: grid;
+  .grid-container{
+    display: grid;
     grid-template-columns: auto auto auto auto;
+    margin: 75px 0;
 
+  }
+
+  .steak-sect{
+    margin-top: 75px;
   }
 
   /* Menu Img Sizing */
